# scarb-agent

./: Cargo.toml  README.md  rust-toolchain
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md
cairo-hints/: Cargo.toml
cairo-hints/scarb-hints-new/templates/python/: README.hbs
cairo-hints/scarb-hints-run/: main.rs
cairo-io-serde/: Cargo.toml
cairo-io-serde/src/: cairo_input.rs  cairo_output.rs  lib.rs  schema.rs  utils.rs
cairo-lang-hints-test-runner/: Cargo.toml
cairo-lang-hints-test-runner/src/: lib.rs
cairo-oracle-hint-processor/: Cargo.toml
cairo-oracle-hint-processor/src/: cairo_run.rs  lib.rs  rpc_hint_processor.rs
cairo-proto-serde/src/: configuration.rs  lib.rs
documentation/: Reference.md  Tutorial.md
examples/js_sqrt/: Scarb.toml
examples/rust_complex/: Scarb.toml
examples/rust_sqrt/: Scarb.toml
mocks/output_testing/: Scarb.toml  cairo_schema.yaml
mocks/output_testing/proto/: oracle.proto
mocks/output_testing/src/: lib.cairo
scarb-agent/: Cargo.toml
scarb-agent/scarb-agent-generate/: main.rs
scarb-agent/scarb-agent-lib/: lib.rs  serialization.rs  utils.rs
scarb-agent/scarb-agent-new/: main.rs  new.rs  new_cairo.rs  new_js.rs  new_python.rs  restricted_names.rs  templates.rs
scarb-agent/scarb-agent-new/templates/: Dockerfile.hbs  README.hbs  cloudbuild.hbs  run-service.hbs
scarb-agent/scarb-agent-run/: main.rs
scarb-agent/scarb-agent-test/: main.rs
